[package]
name = "ripsecrets"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grep = "0.2.8"
ignore = "0.4.18"
num_cpus = "1.13.1"
regex = "1.1"
termcolor = "1.1.2"
memoize = "0.3.0"
tempfile = "3.3.0"
clap = { version = "3.1.10", features = ["derive"] }
fxhash = "0.2.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "find_secrets"
harness = false

